# imageservice

./: .gitignore  .travis.yml  ChangeLog.md  README.md  cabal.project  default.nix  dev.nix  dev.sh  imageduplicates.cabal  imageservice.cabal  nixpkgs.nix  release.nix  sample.dhall
.github/workflows/: test.yml
app/: app.js  index.html
frontend/: bundle.js  default.nix  dev.sh  frontend.nix  index.html  index.js  packages.nix
frontend/src/: App.purs  Config.purs  Form.purs  Main.purs
frontend/src/API/: Images.purs  QueryError.purs  Size.purs
frontend/src/Json/: Images.purs
imageservice/: README.md  default.nix  imageservice.cabal  sample.dhall
imageservice/app/: Main.hs
imageservice/benchmark/: Benchmark.hs
imageservice/src/: API.hs  App.hs  Config.hs  Database.hs  ImageService.hs  Main.hs  Metrics.hs  Server.hs
imageservice/src/Data/: BKTree.hs  Fingerprint.hs  Trie.hs
imageservice/src/Network/HTTP/: Client.hs
imageservice/src/Network/HTTP/Client/: Internal.hs
imageservice/src/Network/HTTP/Images/: Html.hs
imageservice/src/Worker/: Cleaner.hs
imageservice/test/: Spec.hs
imageservice/test/Test/: Config.hs  Database.hs
imageservice/test/Test/Data/: BKTree.hs
imageservice/test/Test/Network/Images/: Html.hs  Imgur.hs
nix/: QuickCheck-deriving.json  masse-prelude.json
src/: API.hs  App.hs  Config.hs  Database.hs  Logging.hs  Main.hs  Metrics.hs  Monitoring.hs  MyPrelude.hs  Server.hs
src/Data/: BKTree.hs  Fingerprint.hs  Trie.hs
src/Network/HTTP/: Client.hs  Images.hs
src/Network/HTTP/Client/: Internal.hs
src/Network/HTTP/Images/: Common.hs  Html.hs  Imgur.hs  Reddit.hs  Types.hs
src/Worker/: Cleaner.hs  Indexer.hs
src/Worker/Indexer/: Reddit.hs
test/: Spec.hs
test/Test/: Config.hs  Database.hs
test/Test/Data/: BKTree.hs
test/Test/Network/Images/: Common.hs  Html.hs  Imgur.hs  Reddit.hs
testdata/: data.json  empty.json  imgur.json
