cabal-version:       2.4
name:                imageservice
version:             0.1.0.0
-- synopsis:
-- description:
license:             BSD-3-Clause
license-file:        LICENSE
author:              Mats Rauhala
maintainer:          mats.rauhala@iki.fi
-- copyright:
-- category:
build-type:          Simple
extra-source-files:  ChangeLog.md

common common-stanza
  build-depends:      base ^>=4.11 || ^>=4.12 || ^>=4.13
  default-language:    Haskell2010

library
  import:              common-stanza
  hs-source-dirs:      src
  exposed-modules:     Data.BKTree
                     , Data.Fingerprint
                     , Data.Trie
                     , Database
                     , API
                     , App
                     , Server
                     , Network.HTTP.Client
                     , Network.HTTP.Client.Internal
                     , Network.HTTP.Images
                     , Network.HTTP.Images.Common
                     , Network.HTTP.Images.Html
                     , Network.HTTP.Images.Imgur
                     , Network.HTTP.Images.Reddit
                     , Network.HTTP.Images.Types
                     , Worker.Indexer.Reddit
                     , Worker.Indexer
                     , Config
                     , Monitoring
                     , Logging
                     , Metrics
                     , Worker.Cleaner
                     , ImageService
  build-depends:       JuicyPixels
                     , JuicyPixels-extra
                     , aeson
                     , async
                     , bytestring
                     , comonad
                     , conduit
                     , conduit-extra
                     , containers
                     , dhall
                     , directory
                     , either
                     , ekg-core
                     , exceptions
                     , filepath
                     , foldl
                     , generic-lens
                     , html-conduit
                     , http-client-tls
                     , http-conduit
                     , http-types
                     , katip
                     , lens
                     , lens
                     , lens-aeson
                     , masse-prelude
                     , mtl
                     , network-uri
                     , optparse-generic
                     , recursion-schemes
                     , resourcet
                     , safecopy
                     , servant
                     , servant-docs
                     , servant-server
                     , split
                     , sqlite-simple
                     , stm
                     , temporary
                     , text
                     , time
                     , transformers
                     , unliftio
                     , wai
                     , wai-cors
                     , wai-middleware-metrics
                     , warp
                     , xml-conduit
                     , xml-lens
                     , QuickCheck-deriving
                     , QuickCheck

executable imageservice
  import:              common-stanza
  main-is:             Main.hs
  ghc-options:         -Wall -threaded -rtsopts -O2
  build-depends:       imageservice
  -- other-extensions:
  hs-source-dirs:      app

test-suite spec
  import:              common-stanza
  type: exitcode-stdio-1.0
  main-is: Spec.hs
  hs-source-dirs:      test
  other-modules:
                       Test.Config
                       Test.Data.BKTree
                       Test.Database
  build-depends:       JuicyPixels
                     , JuicyPixels-extra
                     , imageservice
                     , aeson
                     , async
                     , bytestring
                     , comonad
                     , conduit
                     , conduit-extra
                     , containers
                     , dhall
                     , directory
                     , either
                     , ekg-core
                     , exceptions
                     , filepath
                     , generic-lens
                     , generic-lens
                     , genvalidity
                     , genvalidity-aeson
                     , genvalidity-containers
                     , genvalidity-hspec
                     , genvalidity-text
                     , genvalidity-time
                     , hspec
                     , html-conduit
                     , http-client
                     , http-client-tls
                     , http-conduit
                     , http-types
                     , katip
                     , lens
                     , lens
                     , lens-aeson
                     , masse-prelude
                     , mtl
                     , network-uri
                     , optparse-generic
                     , recursion-schemes
                     , resourcet
                     , safecopy
                     , servant
                     , servant-docs
                     , servant-server
                     , split
                     , sqlite-simple
                     , stm
                     , temporary
                     , text
                     , time
                     , transformers
                     , unliftio
                     , validity
                     , wai
                     , wai-cors
                     , wai-middleware-metrics
                     , warp
                     , xml-conduit
                     , xml-lens
                     , QuickCheck
                     , QuickCheck-deriving
